objects/FieloEE__Program__c.object
<CustomObject>
    <description>Settings of each of your Fielo programs. You can create up to XXXX different programs.</description>
    <fields>
        <fullName>FieloEE__ActiveContactsCalculation__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Check this option for the system to create a new account when you surpass 10,000 users.</inlineHelpText>
        <label>ActiveContactsCalculation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloEE__AgreementFieldSet__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Agreement Field Set</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FieloEE__AgreementView__c</fullName>
        <description>This page will be the one that overwrites the standard one to show the Agreement in the Front End.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This page will be the one that overwrites the standard one to show the Agreement in the front end.</inlineHelpText>
        <label>Agreement View</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__AttachmentId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Attachment Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__AuditPoints__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box for auditing this member&apos;s points.</inlineHelpText>
        <label>Audit Points</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloEE__AutomaticCode__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Automatic Code</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloEE__AutonumericMemberCode__c</fullName>
        <defaultValue>100000000000</defaultValue>
        <label>Autonumeric MemberCode</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloEE__BannerInjectQuery__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Banner Inject Query</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FieloEE__CaptchaPublicKey__c</fullName>
        <description>A public key obtained at Google.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Public Key</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__CaptchaSecretKey__c</fullName>
        <description>A private key obtained at Google.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Copy here the Private Key obtained at Google.</inlineHelpText>
        <label>Secret Key</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__CaptchaURL__c</fullName>
        <description>The URL from where you get a Captcha system.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter the URL that provides your Captcha system.</inlineHelpText>
        <label>Captcha URL</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__Captcha__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checking this option will allow a Captcha system in the members&apos; portal.</description>
        <inlineHelpText>Click here to enable Captcha. You need to create an account in a site providing a Captcha system.</inlineHelpText>
        <label>Captcha</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloEE__CategoryInjectQuery__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Category Inject Query</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FieloEE__ChangePasswordPage__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Change Password Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__ComponentFieldsQuery__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Component Fields Query</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FieloEE__CustomPage__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Indicate the page you want to use instead of Fielo’s CMS.</inlineHelpText>
        <label>Custom Page</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__CustomVoucherCss__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter the CSS code to be applied to customized vouchers.</inlineHelpText>
        <label>Custom Voucher CSS</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__Default__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checking this option makes this your default program.</description>
        <inlineHelpText>Chek this box if you want to make this your default program.</inlineHelpText>
        <label>Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloEE__EmailTemplateRegister__c</fullName>
        <description>The template for the email that will be sent when a new member finishes the first step of registration.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Indicate the template that will be sent when the new member finishes the first step of registration.</inlineHelpText>
        <label>Email Template Register</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__ExpirationMode__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Pick &quot;None&quot; if member inactivity will not result in the expiration of points. Pick &quot;Total&quot; if member inactivity will result in the expiration of the total of points. The value &quot;Partial&quot; allows for a number of points to expire.</inlineHelpText>
        <label>Expiration Mode</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__ExpirationPeriod__c</fullName>
        <description>Number of months during which the member&apos;s points will be valid.</description>
        <inlineHelpText>Set the quantity of months that the member will have active points.</inlineHelpText>
        <label>Expiration Period</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloEE__ExpirationTypeDetail__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Expiration Type Detail</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__FacebookAplicationId__c</fullName>
        <description>Your Facebook Application ID number, for Facebook integration.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter your Facebook Application ID number for Facebook integration.</inlineHelpText>
        <label>Aplication Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__FacebookAplicationSecret__c</fullName>
        <description>Your Facebook Secret Key, for Facebook integration.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter your Facebook Secret Key for Facebook integration.</inlineHelpText>
        <label>Aplication Secret</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__FacebookRecomendationDescription__c</fullName>
        <defaultValue>&apos;Join Our Loyalty Program&apos;</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter a description of your program that will be shown in recommendations.</inlineHelpText>
        <label>Recomendation Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FieloEE__FacebookRecomendationName__c</fullName>
        <defaultValue>&apos;Fielo Loyalty&apos;</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Specify the title to be used on the members’ recommendations.</inlineHelpText>
        <label>Recomendation Title</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__FacebookRecomendationSubtitle__c</fullName>
        <description>The subtitle for this recomendation.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter a subtitle for the recommendation.</inlineHelpText>
        <label>Recomendation Subtitle</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__Facebook__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Facebook</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloEE__FieldSet__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>FieldSet</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FieloEE__FirstBuyIntencive__c</fullName>
        <label>First Buy Intencive</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloEE__Google__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Copy here the public key obtained at Google.</inlineHelpText>
        <label>Google</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloEE__HTMLHeadGeneral__c</fullName>
        <description>Advanced HTML for head element.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>HTML head general</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FieloEE__IdentificationCodeType__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Choose here to validate the Member Code during signup.</inlineHelpText>
        <label>Identification Code Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__InactiveDays__c</fullName>
        <description>The number of days whitout generating transactions that will make a member to become inactive.</description>
        <inlineHelpText>Set the number of days a member may be without generating transactions before being inactivated.</inlineHelpText>
        <label>Member Inactivity (in days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloEE__InstructionsReward__c</fullName>
        <description>The instructions for redeeming a reward.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter the instructions for redeeming a reward. It will also be shown in the vouchers.</inlineHelpText>
        <label>Reward Instructions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FieloEE__InstructionsVoucher__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter the instructions that will be shown in the vouchers.</inlineHelpText>
        <label>Voucher Instructions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FieloEE__Language__c</fullName>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>en_US</fullName>
                </value>
                <value>
                    <fullName>es</fullName>
                </value>
                <value>
                    <fullName>pt_BR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FieloEE__Linkedin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Linkedin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloEE__Locale__c</fullName>
        <label>Locale</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>en_US</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FieloEE__MemberCodeClass__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Member Code Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__MemberCodeClasse__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Member Code Classe</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__MemberCode__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Member Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloEE__MenuFieldSet__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Menu Field Set</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FieloEE__MetricPeriod__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Specify the frequency of metric calculations.</inlineHelpText>
        <label>Metric Period</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__NewsInjectQuery__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Content Feed Inject Query</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FieloEE__NewsView__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Content Feed View</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__NumberOfVoucherDigits__c</fullName>
        <description>The number of digits in automatic vouchers.</description>
        <inlineHelpText>Set the number of digits for the automatic vouchers.</inlineHelpText>
        <label>Number of Voucher Digits</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloEE__OneStepRegistration__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checking this option will enable registration in one step.</description>
        <inlineHelpText>Set if the registration is in one or two steps.</inlineHelpText>
        <label>One Step Registration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloEE__OpenRedemptionDays__c</fullName>
        <description>The number of days that a redemption will stay open.</description>
        <inlineHelpText>Enter the number of days during which a redemption will be open. After that time lapse,  the redemption will be deleted.</inlineHelpText>
        <label>Open Redemption Days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloEE__PackagePrefix__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Package Prefix</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__PointCost__c</fullName>
        <label>Actual Point Cost</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FieloEE__RecentRewardsDays__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Days during which a reward will show in the Most Recent list in the members&apos; portal.</description>
        <inlineHelpText>Set the number of days a product will appear in the Most Recent list in the members&apos; portal.</inlineHelpText>
        <label>Most Recent reward status (in days)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloEE__RecommendPage__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Recommend Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__RedemptionApproval__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checking this option will establish an approval process for reward redemptions.</description>
        <inlineHelpText>Check this option if you wish to establish an approval process for the redemptions.</inlineHelpText>
        <label>Request Redemption Authorization</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloEE__RedemptionView__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Redemption View</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__ReferalTransactionStep1__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checking this option will give points to members who refer new members.</description>
        <inlineHelpText>Check this box if you want to reward additional points when the referred member completes the registration (points are given to the member who referred the new one).</inlineHelpText>
        <label>Referral Incentive Step 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloEE__ReferalTransactionStep2__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Points given as incentive for members to complete the registration process.</description>
        <inlineHelpText>Check this box if you want to reward with points an existing member who refers someone else. The points are issued when the new member signs up.</inlineHelpText>
        <label>Referral Incentive Step 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloEE__RegistrationTransaction__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checking this option will give points to new members for registering in the program.</description>
        <inlineHelpText>Check this option if you want to reward new members for registering.</inlineHelpText>
        <label>Registration Incentive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloEE__RequestAutorization__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checking this option will make members registration subject to an approval process.</description>
        <inlineHelpText>Define whether new member registration is subject to an approval process. By checking this option, the user establishes a workflow to approve new members.</inlineHelpText>
        <label>Request User Authorization</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloEE__RequestTransactionAuthorization__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Request Transaction Authorization</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloEE__RewardInjectQuery__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Reward Inject Query</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FieloEE__RewardView__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Reward View</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__SearchRewardMenu__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Search Reward Menu</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__SegmentInjectQuery__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Segment Inject Query</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FieloEE__SenderDisplayName__c</fullName>
        <description>The sender name for all emails sent from the application.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter the sender name that will be shown in all the emails sent from the application.</inlineHelpText>
        <label>Sender Display Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__ShoppingCartPage__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Shopping Cart Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__ShoppingCart__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Shopping Cart</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloEE__ShowVoucherCode__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Show Voucher Code</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloEE__SiteDomain__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Site Domain</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__SiteProfile__c</fullName>
        <defaultValue>&apos;Fielo Member Site&apos;</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Pick the profile name for new users in your program.</inlineHelpText>
        <label>Site Profile</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__SiteURL__c</fullName>
        <description>The URL used to complete the registration process.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>URL of the site used to send the links to continue the registration process</inlineHelpText>
        <label>Site URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__Step1RegistrationMessage__c</fullName>
        <description>A message to be showed to members in the first step of registration.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter a message to be shown to new members in the first step of the registration.</inlineHelpText>
        <label>Step 1 Registration Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FieloEE__Step2RegistrationMessage__c</fullName>
        <description>A message to be showed to members in the second step of registration.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter a message that will be shown to new members in the second step of the registration.</inlineHelpText>
        <label>Step 2 Registration Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FieloEE__StockControl__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Stock Control</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloEE__TagInjectQuery__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Tag Inject Query</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FieloEE__TimeOutOrphanTransactions__c</fullName>
        <description>The number of days after which a transaction will expire if the person who performed it does not register in your program.</description>
        <inlineHelpText>Set the time in days for transactions to expire if the member doesn&apos;t register in Fielo.</inlineHelpText>
        <label>TimeOut Orphan Transactions</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloEE__TimeZone__c</fullName>
        <description>International time zone you want to set for your program.</description>
        <inlineHelpText>Set the time zone for your program.</inlineHelpText>
        <label>Time Zone</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>en_US</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FieloEE__TransactionProcessOnline__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkin this option will record all transactions online when they occur. If unchecked, you will have to register them offline.</description>
        <inlineHelpText>Decide if you would rather register every transaction online when it happens, or offline altogether as a pack.</inlineHelpText>
        <label>Transaction Process Online</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloEE__Twitter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Twitter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloEE__UseAgreement__c</fullName>
        <defaultValue>true</defaultValue>
        <description>When checked, the Program will have active the Agreement functionality.</description>
        <inlineHelpText>When checked, the Program will have active the Agreement functionality.</inlineHelpText>
        <label>Use Agreement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloEE__UserCreationClass__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter the class you want to use for reflection of the user creation process.</inlineHelpText>
        <label>User Creation Class</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__ValidatePointsByItem__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Validate Points By Item</label>
        <type>Checkbox</type>
    </fields>
    <label>Program</label>
    <listViews>
        <fullName>FieloEE__All_Programs</fullName>
        <columns>NAME</columns>
        <columns>FieloEE__Default__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Programs</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Program Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Program</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>FieloEE__Complete_Site_URL</fullName>
        <active>true</active>
        <errorConditionFormula>FieloEE__Default__c  =  FALSE &amp;&amp; FieloEE__SiteURL__c  = NULL</errorConditionFormula>
        <errorDisplayField>FieloEE__SiteURL__c</errorDisplayField>
        <errorMessage>Complete Site URL. You can find it going to Setup -&gt; Develop -&gt; Sites</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FieloEE__Open_Redemption_Days</fullName>
        <active>true</active>
        <errorConditionFormula>FieloEE__OpenRedemptionDays__c &lt; 0</errorConditionFormula>
        <errorDisplayField>FieloEE__OpenRedemptionDays__c</errorDisplayField>
        <errorMessage>Value cannot be negative</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FieloEE__Validate_Expiration_Period</fullName>
        <active>true</active>
        <errorConditionFormula>FieloEE__ExpirationPeriod__c &lt; 0</errorConditionFormula>
        <errorDisplayField>FieloEE__ExpirationPeriod__c</errorDisplayField>
        <errorMessage>Value cannot be negative</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FieloEE__Validate_Inactive_Days</fullName>
        <active>true</active>
        <errorConditionFormula>FieloEE__InactiveDays__c &lt; 1</errorConditionFormula>
        <errorDisplayField>FieloEE__InactiveDays__c</errorDisplayField>
        <errorMessage>Quantity should be positive</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FieloEE__Validate_Numer_of_voucher_digits</fullName>
        <active>true</active>
        <errorConditionFormula>FieloEE__NumberOfVoucherDigits__c &lt; 4</errorConditionFormula>
        <errorDisplayField>FieloEE__NumberOfVoucherDigits__c</errorDisplayField>
        <errorMessage>Must be greater than 4 digits</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FieloEE__Validate_RecentRewardsDays</fullName>
        <active>true</active>
        <errorConditionFormula>FieloEE__RecentRewardsDays__c &lt; 1</errorConditionFormula>
        <errorDisplayField>FieloEE__RecentRewardsDays__c</errorDisplayField>
        <errorMessage>The quantity should be positive</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FieloEE__Validate_TimeOut_Orphan_Transactions</fullName>
        <active>true</active>
        <errorConditionFormula>FieloEE__TimeOutOrphanTransactions__c &lt; 0 || FieloEE__TimeOutOrphanTransactions__c &gt; 30</errorConditionFormula>
        <errorDisplayField>FieloEE__TimeOutOrphanTransactions__c</errorDisplayField>
        <errorMessage>Value must be between 0 and 30</errorMessage>
    </validationRules>
</CustomObject>